# FaultDiagnosisCNN_LSTM

./: .gitignore  README.md  pyproject.toml
dataset/processed/: labels.txt
dataset/processed/check_txt/: Sample_0_Healthy.txt  Sample_1_Bearing_Fault.txt  Sample_2_Bowed_Rotor.txt  Sample_3_Broken_Bars.txt  Sample_4_Misalignment.txt  Sample_5_Unbalance.txt
src/: addNoise.py  check.py  convert1dTo2d.py  gui.py  main.py  model.py  npy2img.py  preProcess.py  train.py
